fix: Address critical and high-priority findings from security report
This commit addresses and resolves several critical and high-priority issues identified in a recent security analysis. The fixes include:
- Resolved a  vulnerability in .
- Corrected the  from  in .
- Added missing zero-address checks in constructors and setters.
- Standardized all contract pragmas to a single version to prevent compiler-related issues.
These changes significantly improve the security and robustness of the protocol.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ packages/hardhat/contracts/@account-abstraction/
 
 # OpenZeppelin state files
 packages/hardhat/.openzeppelin/
+
+# --- Local & Internal Documentation ---
+# These files are for the developer's internal use and should not be committed.
+STATUS.md
+SESSION_SUMMARY.md
